Created PlanPurchase API for Individual
(POST,PUT,GET)