@@ -1,35 +1,37 @@
 package com.swasthyamitra.healthportal.convertor;
 
+import jakarta.persistence.AttributeConverter;
+import jakarta.persistence.Converter;
+
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-
-import jakarta.persistence.AttributeConverter;
-import jakarta.persistence.Converter;
-import org.springframework.beans.factory.annotation.Value;
+import java.util.stream.Collectors;
 
 @Converter
 public class StringListConvertor implements AttributeConverter<List<String>, String> {
 
-    @Value("${list.delimiter}")
-    private String delimiter;
+    private static final String DELIMITER = ","; // use a consistent and safe delimiter
 
     @Override
     public String convertToDatabaseColumn(List<String> attribute) {
         if (attribute == null || attribute.isEmpty()) {
             return null;
         }
+
         List<String> nonEmptyStrings = attribute.stream()
-                .filter(str -> str != null && !str.isEmpty())
-                .toList();
-        return String.join(delimiter, nonEmptyStrings);
+                .filter(str -> str != null && !str.isBlank())
+                .collect(Collectors.toList());
+
+        return String.join(DELIMITER, nonEmptyStrings);
     }
 
     @Override
     public List<String> convertToEntityAttribute(String dbData) {
-        if (dbData == null || dbData.isEmpty()) {
+        if (dbData == null || dbData.isBlank()) {
             return Collections.emptyList();
         }
-        return Arrays.asList(dbData.split("\\Q" + delimiter + "\\E"));
+
+        return Arrays.asList(dbData.split("\\Q" + DELIMITER + "\\E"));
     }
 }
